--- a/my-portfolio/port.css
+++ b/my-portfolio/port.css
@@ -32,6 +32,10 @@ nav{
 {
     color:#FD6E0A;
 }
+.text-center
+{
+    text-align: center;
+}
 /* nav items */
 nav ul{
     display:flex;
@@ -101,12 +105,17 @@ main{
     width:1140px;
     margin:0px auto;
 }
+main section{
+    margin-top:130px;
+    margin-bottom: 130px;
+
+}
 .about
 {
     border-radius: 10px;
     padding:130px 150px;
     text-align: center;
-    margin-top:130px;
+    
    
 }
 .banner-description
@@ -123,4 +132,91 @@ main{
 {
     font: 20px;
     font-weight: bold;
+    
+}
+
+/* Skills items */
+.skill-container
+{
+    margin-top:50px;
+    display: flex;
+    gap:24px;
+}
+.skill
+{
+    padding:30px;
+    box-shadow: 0px 6px 50px rgba(0,0,0,0.6);
+    border-radius: 5px;
+}
+.skill-description
+{
+    text-align: none;
+}
+
+/* column */
+.resume{
+    text-align: center;
+}
+.resume-container
+{
+        display:flex;
+        gap:24px;
+}
+.resume-column-title
+{
+    font-size: 30px;
+    font-weight: bold;
+    
+}
+.experience-title
+{
+    font-weight: bold;
+    font-size: 25px;;
+}
+.experience-sub-title
+{
+    font-size: 20px;
+    font-weight:60px;
+    color:#757575;
+   
+}
+.experience-description
+{
+    color: #757575;
+    
+}
+.experience{
+    text-align: center;
+
+}
+.resume hr{
+    margin:30px;
+
+}
+.resume-cv
+{
+    margin-top:25px;
+    font-size: 50px;;
+}
+
+/* Footer  */
+footer{
+    padding:130px 230px;
+    display:flex;
+    gap:100px;
+    border-radius: 27px;
+}
+.footer-column
+{
+    width:50%;
+}
+footer input[type="text"],footer input[type="email"],footer textarea{
+    height:64px;
+    border-radius: 5px;
+    background-color: white;
+    padding:10px 20px;
+    width:100%;
+    margin-bottom:20px;
+    border:none;
+
 }
